--- a/src/features/pokemon/Pokemon.module.css
+++ b/src/features/pokemon/Pokemon.module.css
@@ -1,20 +1,28 @@
-.select {
-  font-size: 25px;
-  padding: 5px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  size: 50;
-  outline: none;
-  border: 2px solid transparent;
-  color: rgb(112, 76, 182);
-  cursor: pointer;
-  background-color: rgba(112, 76, 182, 0.1);
-  border-radius: 5px;
-  transition: all 0.15s;
+.resultsContainer {
+  display: grid;
+  gap: 1rem;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.resultsItem button {
+  color: var(--link-color);
+  border: 2px solid transparent;
+  width: 100%;
+}
+
+.resultsItem button:hover {
+  color: var(--link-color-hover);
+  background-color: var(--background-color-outline-hover);
+  border-color: var(--link-color-hover);
+}
+
+.resultsItem h2 {
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+@media screen and (min-width: 40rem) {
+  .resultsContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
