--- a/src/features/pagination/Pagination.module.css
+++ b/src/features/pagination/Pagination.module.css
@@ -3,6 +3,11 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  flex-grow: 1;
+}
+
+.pagination > .row {
+  flex-grow: 1;
 }
 
 .controls {
