--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 :root {
-  --link-color: #096cdd;
-  --link-color-hover: #0856b0;
+  --link-color: #3264b0;
+  --link-color-hover: #1d2c5e;
   --background-color-outline-hover: #f3f3f3;
   --background-color-solid-hover: var(--link-color-hover);
   --border-radius: 0.25rem;
-  --active: rgba(240, 90, 20, 0.125);
+  --active: rgba(245, 200, 10, 0.25);
 }
 
 ul {
