--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,18 @@ ul {
   padding: 0;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
 .app {
   min-height: 100vh;
   display: flex;
